tests/snapshots/run_wpt_conformance__coreml_slice_float32_2D_tensor_with_strides.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
slice.https.any.js slice float32 2D tensor with strides, coreml
 Failed to dispatch graph: coreml runtime failed: prediction failed: NSGenericException: Failed to add operation to E5 stream. E5RT: Unable to bind buffer to network. (2)

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    sliceInput: f32[2, 12];
  }

  nodes {
    [sliceOutput] = slice(sliceInput, label="", strides=[1, 4]);
  }

  outputs { sliceOutput; }
}
