tests/snapshots/run_wpt_conformance__coreml_slice_float32_3D_tensor.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "slice.https.any.js",
    "slice float32 3D tensor",
    "coreml",
    "PASS",
)
