tests/snapshots/run_wpt_conformance__coreml_slice_int32_2D_tensor.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "slice.https.any.js",
    "slice int32 2D tensor",
    "coreml",
    "PASS",
)
