tests/snapshots/run_wpt_conformance__coreml_slicing_float32_0D_constant_tensor_with_empty_starts_and_sizes_should_be_a_no-op.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
slice.https.any.js slicing float32 0D constant tensor with empty starts and sizes should be a no-op, coreml
 Failed to build graph: coreml runtime failed: MLModel compile failed: Failed to parse the model specification. Error: Unable to parse ML Program: in operation of type slice_by_size: Param 'x' has incorrect type for operator 'ios17.slice_by_size'. Expected { ...]>, ...]>, ...]>, ...]>, ...]>, ...]>, ...]>, ...]>, [?, [?, [?, [?, [?, [?, [?, [?, tensor<bool, tensor<fp16, tensor<fp32, tensor<int16, tensor<int32, tensor<int8, tensor<uint16, tensor<uint8 }; got fp32.

--- built graph ---
webnn_graph "graph" v2 {
  consts {
    operand_0: f32[] @bytes([31, 197, 230, 65]);
  }

  nodes {
    [sliceOutput] = slice(operand_0, label="", strides=[]);
  }

  outputs { sliceOutput; }
}
