tests/snapshots/run_wpt_conformance__coreml_softmax_float16_2D_constant_tensor_all_positive.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
softmax.https.any.js softmax float16 2D constant tensor all positive, coreml
 Failed to build graph: coreml runtime failed: MLModel load failed: Failed to build the model execution plan using a model architecture file '<coreml-temp-model>' with error code: -14.

--- built graph ---
webnn_graph "graph" v2 {
  consts {
    operand_0: f16[4, 6] @bytes([231, 71, 92, 70, 213, 68, 202, 72, 190, 50, 142, 68, 38, 71, 42, 72, 37, 62, 162, 70, 209, 61, 212, 50, 66, 69, 25, 72, 21, 72, 192, 65, 122, 72, 29, 70, 140, 62, 108, 52, 7, 69, 204, 67, 203, 65, 228, 70]);
  }

  nodes {
    [softmaxOutput] = softmax(operand_0, label="");
  }

  outputs { softmaxOutput; }
}
